--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta name='viewport'>
     <meta http-equiv='X-UA-Compatible' content=;ie-edge'>
     <title>ReactJS Basics</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
+    <div id="app"></div>
     <script src='/app/bundle.js'>
     </script>
   </body>
