--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8'>
     <meta name='viewport'>
-    <meta http-equiv='X-UA-Compatible' content=;ie-edge'>
+    <meta http-equiv='X-UA-Compatible' content='ie-edge'>
     <title>ReactJS Basics</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
